# SparkFun_MMA8452Q_Arduino_Library

./: CMakeLists.txt  README.md  library.json  library.properties
examples/Example1_BasicReading/: Example1_BasicReading.ino
examples/Example2_RawDataReading/: Example2_RawDataReading.ino
examples/Example3_InitializeFullScale/: Example3_InitializeFullScale.ino
examples/Example3_Orientation/: Example3_Orientation.ino
examples/Example4_ChangeScale/: Example4_ChangeScale.ino
examples/Example4_InitializeDataRate/: Example4_InitializeDataRate.ino
examples/Example5_ChangeDataRate/: Example5_ChangeDataRate.ino
examples/Example6_ReadTaps/: Example6_ReadTaps.ino
examples/Example7_OriginalDeprecated/: Example7_OriginalDeprecated.ino
examples/Example8_AdvancedI2C/: Example8_AdvancedI2C.ino
examples/Example9_TwoSensors/: Example9_TwoSensors.ino
examples/SparkFun_MMA8452Q_Basic/: SparkFun_MMA8452Q_Basic.ino
src/: SparkFun_MMA8452Q.cpp  SparkFun_MMA8452Q.h
